--- a/portfolio.html
+++ b/portfolio.html
@@ -2,8 +2,53 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Sushi Prompt - Unsolved</title>
+    <title>Siddharth info</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="portfoliostyle.css">
   </head>
   <body>
+    <header class = "header">
+        <nav class="navbar navbar-expand-lg ">
+            <a class="navbar-brand" href="#">Siddharth Dhananjay</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="nav navbar">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">About</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+      </header>
+      <main>
+          <div class = "container">
+              <div class = "row">
+                  <div class= "col-lg-6">
+                      <div class = "page-header">
+                        <h1>Portfolio</h1>
+                      </div>
+                      
+                      <div class = "row">
+                          <div class="col-lg-6">
+                            <img src="" alt="">
+                          </div>
+
+                      </div>
+
+
+                  </div>
+
+              </div>
+
+          </div>
+      </main>
   </body>
 </html>
