--- a/portfolio.html
+++ b/portfolio.html
@@ -31,19 +31,33 @@
       <main>
           <div class = "container">
               <div class = "row">
-                  <div class= "col-lg-6">
+                  <div class= "col-md-6">
                       <div class = "page-header">
-                        <h1>Portfolio</h1>
+                        <h2>Portfolio</h2>
                       </div>
                       
                       <div class = "row">
-                          <div class="col-lg-6">
-                            <img src="" alt="">
+                          <div class="col-md-6">
+                            <img src="cv photo.jpg" alt="placeholder" class="image-responsive">
                           </div>
-
-                      </div>
-
-
+                          <div class="col-md-6">
+                            <img src="cv photo.jpg" alt="placeholder" class="image-responsive">
+                          </div>
+                        </div>
+                        <div class = "row">
+                            <div class="col-md-6">
+                              <img src="cv photo.jpg" alt="placeholder" class="image-responsive">
+                            </div>
+                            <div class="col-md-6">
+                              <img src="cv photo.jpg" alt="placeholder" class="image-responsive">
+                            </div>
+                          </div>
+                        <div class = "row">
+                            <div class="col-md-6">
+                              <img src="cv photo.jpg" alt="placeholder" class="image-responsive">
+                            </div>
+                        </div>
+                    </div>
                   </div>
 
               </div>
