--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Siddharth info</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel= "stylesheet" href= "contactstyle.css">
+    <link rel= "stylesheet" href= "portfoliostyle.css">
   </head>
   <body>
     <header class = "header">
@@ -28,5 +28,39 @@
             </div>
           </nav>
       </header>
+      <main>
+        <div class = "container">
+            <div class = "row">
+                <div class= "col-md-5">
+                    <div class = "page-header">
+                      <h2>Contact</h2>
+                    </div>
+                    <div class = "row">
+                        <form>
+                            <div class="form-group">
+                                <label for="formGroupExampleInput">Name</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name">
+                            </div>
+                            <div class="form-group">
+                              <label for="exampleInputEmail1">Email</label>
+                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleFormControlTextarea1">Message</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                             </div>
+                            
+                            <button type="submit" class="btn btn-info">Submit</button>
+                          </form>
+
+                        
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </main>
   </body>
 </html>
