--- a/index.html
+++ b/index.html
@@ -29,5 +29,24 @@
             </div>
           </nav>
       </header>
+      <main>
+        <div class = "container">
+            <div class = "row">
+                <div class= "col-md-6">
+                    <div class = "page-header">
+                      <h2>About</h2>
+                    </div>
+                    
+                    <div class = "row">
+                        <section>
+                            <img src="" alt="">
+                        </section>
+                  </div>
+                </div>
+
+            </div>
+
+        </div>
+     
   </body>
 </html>
