--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="nav navbar">
+              <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item active">
                   <a class="nav-link" href="#">Portfolio<span class="sr-only">(current)</span></a>
                 </li>
