--- a/index.html
+++ b/index.html
@@ -38,15 +38,28 @@
                     </div>
                     
                     <div class = "row">
-                        <section>
-                            <img src="" alt="">
-                        </section>
+                        <img class = "boutme" src="Aboutme.pht.jpg" alt="Placeholder" style="float:left">
+                        <div class="textboutme" style="float: right;">
+                            I am a second year student at Deakin University studying Commerce and Business Analytics, and going to be majoring in Finance. 
+                            I aspire to become a Business Analyst and work in a challenging and fulfilling business environment.
+                            Demonstrated communication skills, strong work ethic and time management during my time learning music under Laya Vidhya school of music as well helping in organizing events. 
+                            I am a great team worker and a problem solver as well and I have a deep desire to be part of the work force and develop myself
+                            I am a second year student at Deakin University studying Commerce and Business Analytics, and going to be majoring in Finance. 
+                            I aspire to become a Business Analyst and work in a challenging and fulfilling business environment.
+                            Demonstrated communication skills, strong work ethic and time management during my time learning music under Laya Vidhya school of music as well helping in organizing events. 
+                            I am a great team worker and a problem solver as well and I have a deep desire to be part of the work force and develop myself
+                            I am a second year student at Deakin University studying Commerce and Business Analytics, and going to be majoring in Finance. 
+                            I aspire to become a Business Analyst and work in a challenging and fulfilling business environment.
+                            Demonstrated communication skills, strong work ethic and time management during my time learning music under Laya Vidhya school of music as well helping in organizing events. 
+                            I am a great team worker and a problem solver as well and I have a deep desire to be part of the work force and develop myself
+                        </div>
                   </div>
                 </div>
 
             </div>
 
         </div>
+    </main>
      
   </body>
 </html>
