added personal info

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class = "row">
                 <div class= "col-md-6">
                 <div class = "page-header">
-                    <h2>About</h2>
+                    <h2>About me</h2>
                 </div>
                 <div>
                     <img class = "boutme" src="Aboutme.pht.jpg" alt="Placeholder" style="float:left">
@@ -47,7 +47,7 @@
                         I am a second year student at Deakin University studying Commerce and Business Analytics, and going to be majoring in Finance. 
                         I aspire to become a Business Analyst and work in a challenging and fulfilling business environment.
                         Demonstrated communication skills, strong work ethic and time management during my time learning music under Laya Vidhya school of music as well helping in organizing events. 
-                      
+                        <p class=perinfo>My email is: <a href="siddharth.dhananjay@gmail.com">siddharth.dhananjay@gmail.com</a></p>
                     </div>
                 </div>
                   
