--- a/index.html
+++ b/index.html
@@ -1,65 +1,113 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Siddharth info</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel= "stylesheet" href= "style.css">
-  </head>
-  <body>
-    <header class = "header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Siddharth Dhananjay</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-      </header>
-      <main>
-        <div class = "container">
-            <div class = "row">
-                <div class= "col-md-6">
-                <div class = "page-header">
-                    <h2>About me</h2>
-                </div>
-                <div>
-                    <img class = "boutme" src="Aboutme.pht.jpg" alt="Placeholder" style="float:left">
-                    <div class="textboutme">
-                        I am a second year student at Deakin University studying Commerce and Business Analytics, and going to be majoring in Finance. 
-                        I aspire to become a Business Analyst and work in a challenging and fulfilling business environment.
-                        Demonstrated communication skills, strong work ethic and time management during my time learning music under Laya Vidhya school of music as well helping in organizing events. 
-                        I am a great team worker and a problem solver as well and I have a deep desire to be part of the work force and develop myself
-                        I am a second year student at Deakin University studying Commerce and Business Analytics, and going to be majoring in Finance. 
-                        I aspire to become a Business Analyst and work in a challenging and fulfilling business environment.
-                        Demonstrated communication skills, strong work ethic and time management during my time learning music under Laya Vidhya school of music as well helping in organizing events. 
-                        <p class=perinfo>My email is: <a href="siddharth.dhananjay@gmail.com">siddharth.dhananjay@gmail.com</a></p>
-                    </div>
-                </div>
-                  
-                </div>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Siddharth info</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <header class="header">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Siddharth Dhananjay</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <div class="container">
+      <div class="row boutmerow">
+        <div class="col-md-6">
+          <div class="page-header">
+            <h2>About me</h2>
+          </div>
+          <div class="boutmeinfo">
+            <img class="boutme" src="Aboutme.pht.jpg" alt="Placeholder" style="float:left">
+            <div class="textboutme">
+              I am a second year student at Deakin University studying Commerce and Business Analytics, and going to be
+              majoring in Finance.
+              I aspire to become a Business Analyst and work in a challenging and fulfilling business environment.
+              Demonstrated communication skills, strong work ethic and time management during my time learning music
+              under Laya Vidhya school of music as well helping in organizing events.
+              I am a great team worker and a problem solver as well and I have a deep desire to be part of the work
+              force and develop myself
+              I am a second year student at Deakin University studying Commerce and Business Analytics, and going to be
+              majoring in Finance.
+              I aspire to become a Business Analyst and work in a challenging and fulfilling business environment.
+              Demonstrated communication skills, strong work ethic and time management during my time learning music
+              under Laya Vidhya school of music as well helping in organizing events.
+              <p class=perinfo>My email is: <a href="siddharth.dhananjay@gmail.com">siddharth.dhananjay@gmail.com</a>
+              </p>
             </div>
+          </div>
 
         </div>
-    </main>
+        <div class="col-md-6">
+          <div class="row">
+            <h4>My Project</h4>
+            <p> As part of a group we created an application that reccomends certain clothing depending on the current
+              temperature of a given location, and surrounding restaurants surrounding that area</p>
+            <p class="perinfo">My Project: <a
+                href="https://lionhatt.github.io/project-WeatherWear">https://lionhatt.github.io/project-WeatherWear</a>
+            </p>
+            <img class="workimg" src="weather-wear-screenshot-3.png">
+          </div>
+          <div class="row">
+            <h4>Weather-Dashboard</h4>
+            <p> I created an application that displays the current weather, and the forecasted weather for the week, of
+              a given location.</p>
+            <p class="perinfo">My Project: <a
+                href="https://github.com/sid-666/Weather-Dashboard">https://github.com/sid-666/Weather-Dashboard</a>
+            </p>
+            <img class="workimg" src="Webscrnshot.PNG">
+          </div>
+          <div class="row">
+            <h4>Day Planner</h4>
+            <p> I created an application that can allow user to plan out their day via typing desired activities in
+              certain time slots. The time slots are between 9Am to 5PM. The time slot's backround color change to
+              indicate the past, present, and future.
+            </p>
+            <p class="perinfo">My Project: <a
+                href="https://github.com/sid-666/DayPlanner">https://github.com/sid-666/DayPlanner</a>
+            </p>
+            <img class="workimg" src="scrrenshot.PNG">
+          </div>
+        </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>   
-  </body>
+      </div>
+
+    </div>
+  </main>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
